--- a/projects.html
+++ b/projects.html
@@ -18,6 +18,7 @@
                 <li><a href="experience.html" class="nav-link" data-page="experience">Experience</a></li>
                 <li><a href="research.html" class="nav-link" data-page="research">Research</a></li>
                 <li><a href="projects.html" class="nav-link active" data-page="projects">Projects</a></li>
+                <li><a href="contact.html" class="nav-link" data-page="contact">Contact</a></li>
             </ul>
             <button class="theme-toggle" id="theme-toggle" aria-label="Toggle theme">
                 <svg class="sun-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
