--- a/projects.html
+++ b/projects.html
@@ -151,6 +151,38 @@
         </section>
     </main>
 
+    <!-- Chatbot Widget -->
+    <div class="chatbot-widget">
+        <div class="chatbot-container">
+            <div class="chatbot-header">
+                <div class="chatbot-avatar">TC</div>
+                <div class="chatbot-header-info">
+                    <h3>Teerat's Assistant</h3>
+                    <p>Ask me anything!</p>
+                </div>
+            </div>
+            <div class="chatbot-messages"></div>
+            <div class="chatbot-input-container">
+                <input type="text" class="chatbot-input" placeholder="Type a message..." autocomplete="off">
+                <button class="chatbot-send" aria-label="Send message">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <line x1="22" y1="2" x2="11" y2="13"></line>
+                        <polygon points="22 2 15 22 11 13 2 9 22 2"></polygon>
+                    </svg>
+                </button>
+            </div>
+        </div>
+        <button class="chatbot-toggle" aria-label="Toggle chat">
+            <svg class="chat-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
+            </svg>
+            <svg class="close-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <line x1="18" y1="6" x2="6" y2="18"></line>
+                <line x1="6" y1="6" x2="18" y2="18"></line>
+            </svg>
+        </button>
+    </div>
+
     <footer class="footer">
         <p>&copy; 2026 Teerat Chanromyen. All rights reserved.</p>
     </footer>
